# TaonaCoin

./: .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  about  configure.ac  libtaonaconsensus.pc.in
assets/: asset_metadata_spec.md
contrib/: README.md  gitian-build.sh  install_cli.sh  taona-cli.bash-completion  taona-qt.pro  taona-tx.bash-completion  taonad.bash-completion  tidy_datadir.sh
depends/: README.md  description.md
doc/: Doxyfile.in  README.md  (+28 more)
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.h  addressindex.h  addrman.h  amount.h  arith_uint256.h  base58.cpp  base58.h  blockencodings.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coins.cpp  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  cuckoocache.h  dbwrapper.cpp  dbwrapper.h  fs.h  hash.h  httprpc.h  httpserver.cpp  httpserver.h  indirectmap.h  init.cpp  (+67 more)
src/assets/: assetdb.h  assets.cpp  assets.h  assettypes.h
src/bench/: .gitignore  bench.h  ccoins_caching.cpp  coin_selection.cpp  verify_script.cpp
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  tx_verify.cpp  tx_verify.h  validation.h
src/crypto/: aes.h  chacha20.h  common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/crypto/ctaes/: README.md
src/policy/: feerate.cpp  feerate.h  fees.cpp  fees.h  policy.h  rbf.h
src/primitives/: block.h  transaction.cpp  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  assetcontroldialog.cpp  assetcontroldialog.h  assetcontroltreewidget.h  assetfilterproxy.cpp  assetfilterproxy.h  assetrecord.h  assetsdialog.cpp  assetsdialog.h  assettablemodel.h  bantablemodel.h  callback.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  createassetdialog.cpp  createassetdialog.h  csvmodelwriter.h  darkstyle.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  modaloverlay.h  networkstyle.cpp  networkstyle.h  notificator.h  openuridialog.cpp  (+69 more)
src/qt/forms/: addressbookpage.ui  assetcontroldialog.ui  assetsdialog.ui  coincontroldialog.ui  createassetdialog.ui  debugwindow.ui  helpmessagedialog.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  reissueassetdialog.ui  sendassetsentry.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: taona_af.ts  taona_af_ZA.ts  taona_ar.ts  taona_be_BY.ts  taona_bg.ts  taona_bg_BG.ts  taona_ca.ts  taona_ca@valencia.ts  taona_ca_ES.ts  taona_cs.ts  taona_cy.ts  taona_da.ts  taona_de.ts  taona_el.ts  taona_el_GR.ts  taona_en.ts  taona_en_GB.ts  taona_eo.ts  taona_es.ts  taona_es_AR.ts  taona_es_CL.ts  taona_es_CO.ts  taona_es_DO.ts  taona_es_ES.ts  taona_es_MX.ts  taona_es_UY.ts  taona_es_VE.ts  taona_et.ts  taona_et_EE.ts  taona_eu_ES.ts  taona_fa.ts  taona_fa_IR.ts  taona_fi.ts  taona_fr.ts  taona_fr_CA.ts  taona_fr_FR.ts  taona_gl.ts  taona_he.ts  taona_hi_IN.ts  taona_hr.ts  (+46 more)
src/qt/res/: taona-qt-res.rc
src/qt/res/icons/: taona.icns
src/qt/test/: compattests.cpp  compattests.h  paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  rpcnestedtests.cpp  rpcnestedtests.h  test_main.cpp  uritests.cpp  uritests.h  wallettests.cpp  wallettests.h
src/rpc/: assets.cpp  blockchain.cpp  blockchain.h  client.cpp  client.h  mining.cpp  mining.h  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  safemode.h  server.cpp  server.h  test.json
src/script/: interpreter.cpp  interpreter.h  ismine.h  script.cpp  script.h  script_error.h  sigcache.h  sign.h  standard.cpp  standard.h  taonaconsensus.cpp  taonaconsensus.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/contrib/: lax_der_parsing.h
src/secp256k1/src/: tests.c
src/secp256k1/src/java/: org_taona_NativeSecp256k1.c  org_taona_NativeSecp256k1.h  org_taona_Secp256k1Context.c  org_taona_Secp256k1Context.h
src/secp256k1/src/java/org/taona/: NativeSecp256k1.java  NativeSecp256k1Test.java  NativeSecp256k1Util.java  Secp256k1Context.java
src/support/: cleanse.h  events.h  lockedpool.cpp  lockedpool.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: DoS_tests.cpp  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bech32_tests.cpp  bip32_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  merkleblock_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  raii_event_tests.cpp  random_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  (+27 more)
src/test/assets/: asset_reissue_tests.cpp  asset_tests.cpp  asset_tx_tests.cpp  cache_tests.cpp  serialization_tests.cpp
src/test/data/: README.md
src/univalue/include/: univalue.h
src/univalue/lib/: univalue.cpp  univalue_escapes.h  univalue_get.cpp
src/wallet/: coincontrol.h  crypter.h  db.cpp  db.h  feebumper.h  fees.h  init.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.h
src/wallet/test/: crypto_tests.cpp  wallet_test_fixture.h  wallet_tests.cpp
src/zmq/: zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h
(+207 files in other folders)
